      a temporary filename to include a specified extension.
    }
  }
  
  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives an error if the \R code in a
      vignette fails to run, unless this is caused by a missing package.

      \item \command{R CMD Sweave} now supports a \option{--driver}
      option to select the Sweave driver: the default is equivalent to
      \option{--driver=RweaveLatex}.
    }
  }
  
  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{require()} no longer has a \code{save} argument.

      \item The \code{gamma} argument to \code{hsv()},
      \code{rainbow()}, and \code{rgb2hsv()} has been removed.

      \item The \option{--no-docs} option for
      \command{R CMD build --binary} is defunct: use
      \option{--install-args} instead.

      \item The option \option{--unsafe} to \command{R CMD INSTALL} is
      defunct: use the identical option \option{--no-lock} instead.

      \item The entry point \code{pythag} formerly in \file{Rmath.h} is
      defunct: use instead the C99 function \code{hypot}.

      \item \command{R CMD build --binary} is formally defunct:
      \command{R CMD INSTALL --build} has long been the preferred
      alternative.  
    }
  }
}

\section{CHANGES IN R VERSION 2.13.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item \code{replicate()} (by default) and \code{vapply()} (always)
      now return a higher-dimensional array instead of a matrix in the case
      where the inner function value is an array of dimension >= 2.

      \item Printing and formatting of floating point numbers is now
      using the correct number of digits, where it previously rarely
      differed by a few digits. (See \dQuote{scientific} entry below.)
      This affects \emph{many} \file{*.Rout.save} checks in packages.
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{normalizePath()} has been moved to the \pkg{base}